src/styles/blocks/_flashes.scss
.vz-flash {
  margin-bottom: 1rem;
  display: flex;
}

.vz-flash__indicator {
  background-color: rgba(black, .6);
  margin-right: 5px;
  height: auto;
  width: 10px;
}

.vz-flash__indicator--use-icon {
  display: flex;
  width: 59px;
}

.vz-flash__indicator-icon {
  font-size: 1.7rem;
  margin: 0 auto;
  color: $white;
}

.vz-flash__content {
  border-right: 4px solid rgba(black, .6);
  background-color: $white;
  align-items: center;
  padding: 0 1rem;
  height: auto;
  border-bottom: 1px solid rgba(black, .06);
  border-left: 1px solid rgba(black, .06);
  border-top: 1px solid rgba(black, .06);

  a {
    transition: color 0.25s ease-in-out;
    color: $primary;
  }

  a:hover {
    color: #0054af;
  }

  @media #{$mobile} {
    width: 100%;
  }

  p {
    margin: .5rem 0 .5rem;
  }
}

//Content colors
.vz-flash__content--ok {
  border-right: 4px solid $yes;
}

.vz-flash__content--wrong {
  border-right: 4px solid $no;
}

.vz-flash__content--warning {
  border-right: 4px solid $warning;
}

.vz-flash__content--info {
  border-right: 4px solid $info;
}

.vz-flash__indicator--ok {
  background-color: $yes;
}

// Indicators colors
.vz-flash__indicator--wrong {
  background-color: $no;
}

.vz-flash__indicator--warning {
  background-color: $warning;
}

.vz-flash__indicator--info {
  background-color: $info;
}

